--- a/vignettes/using-response-plot.Rmd
+++ b/vignettes/using-response-plot.Rmd
@@ -39,17 +39,27 @@ Inside this app 5 datasets will be used
 
 ```{r echo=TRUE, message=FALSE, warning=FALSE, results="hide"}
 # nolint start
-ADSL <- teal.modules.general::rADSL
-ADSL2 <- teal.modules.general::rADSL %>%
-  mutate(TRTDUR = round(as.numeric(TRTEDTM - TRTSDTM), 1))
-ADRS <- teal.modules.general::rADRS
-ADTTE <- teal.modules.general::rADTTE
-ADLB <- teal.modules.general::rADLB %>%
-  mutate(CHGC = as.factor(case_when(
-    CHG < 1 ~ "N",
-    CHG > 1 ~ "P",
-    TRUE ~ "-"
-  )))
+data <- teal_data()
+data <- within(data, {
+  ADSL <- teal.modules.general::rADSL
+  ADSL2 <- teal.modules.general::rADSL %>%
+    mutate(TRTDUR = round(as.numeric(TRTEDTM - TRTSDTM), 1))
+  ADRS <- teal.modules.general::rADRS
+  ADTTE <- teal.modules.general::rADTTE
+  ADLB <- teal.modules.general::rADLB %>%
+    mutate(CHGC = as.factor(case_when(
+      CHG < 1 ~ "N",
+      CHG > 1 ~ "P",
+      TRUE ~ "-"
+    )))
+})
+datanames <- c("ADSL", "ADSL2", "ADRS", "ADTTE", "ADLB")
+datanames(data) <- datanames
+jk <- default_cdisc_join_keys[datanames]
+jk_adsl2 <- jk
+names(jk_adsl2)[names(jk_adsl2) == "ADSL"] <- "ADSL2"
+jk <- c(jk, jk_adsl2)
+jk["ADSL2", "ADSL"] <- c("USUBJID", "STUDYID")
 # nolint end
 ```
 
@@ -62,29 +72,7 @@ combinations of data sets.
 
 ```{r echo=TRUE, message=FALSE, warning=FALSE, results="hide"}
 app <- teal::init(
-  data = teal.data::cdisc_data(
-    teal.data::cdisc_dataset("ADSL", ADSL, code = "ADSL <- teal.modules.general::rADSL"),
-    teal.data::cdisc_dataset(
-      "ADSL2",
-      ADSL2,
-      keys = get_cdisc_keys("ADSL"),
-      code = "ADSL2 <- teal.modules.general::rADSL %>%
-              mutate(TRTDUR = round(as.numeric(TRTEDTM - TRTSDTM), 1))"
-    ),
-    teal.data::cdisc_dataset("ADRS", ADRS, code = "ADRS <- teal.modules.general::rADRS"),
-    teal.data::cdisc_dataset("ADTTE", ADTTE, code = "ADTTE <- teal.modules.general::rADTTE"),
-    teal.data::cdisc_dataset(
-      "ADLB",
-      ADLB,
-      code = "ADLB <- teal.modules.general::rADLB %>%
-            mutate(CHGC = as.factor(case_when(
-            CHG < 1 ~ 'N',
-            CHG > 1 ~ 'P',
-            TRUE ~ '-'
-            )))"
-    ),
-    check = TRUE
-  ),
+  data = data,
   modules = teal::modules(
     modules(
       label = "Response plot",
@@ -94,7 +82,7 @@ app <- teal::init(
           dataname = "ADSL",
           select = select_spec(
             label = "Select variable:",
-            choices = variable_choices(ADSL, c("BMRKR2", "ITTFL", "BEP01FL")),
+            choices = variable_choices(data[["ADSL"]], c("BMRKR2", "ITTFL", "BEP01FL")),
             selected = "BMRKR2",
             multiple = FALSE,
             fixed = FALSE
@@ -104,7 +92,7 @@ app <- teal::init(
           dataname = "ADSL",
           select = select_spec(
             label = "Select variable:",
-            choices = variable_choices(ADSL, c("SEX", "RACE", "COUNTRY", "ARMCD", "STRATA1")),
+            choices = variable_choices(data[["ADSL"]], c("SEX", "RACE", "COUNTRY", "ARMCD", "STRATA1")),
             selected = "ARMCD",
             multiple = FALSE,
             fixed = FALSE
@@ -117,7 +105,7 @@ app <- teal::init(
           dataname = "ADSL",
           select = select_spec(
             label = "Select variable:",
-            choices = variable_choices(ADSL, c("BMRKR2", "ITTFL", "BEP01FL")),
+            choices = variable_choices(data[["ADSL"]], c("BMRKR2", "ITTFL", "BEP01FL")),
             selected = "BMRKR2",
             multiple = FALSE
           )
@@ -140,21 +128,21 @@ app <- teal::init(
             filter_spec(
               label = "Select parameter:",
               vars = "PARAMCD",
-              choices = levels(ADLB$PARAMCD),
-              selected = levels(ADLB$PARAMCD)[1],
+              choices = levels(data[["ADLB"]]$PARAMCD),
+              selected = levels(data[["ADLB"]]$PARAMCD)[1],
               multiple = FALSE
             ),
             filter_spec(
               label = "Select visit:",
               vars = "AVISIT",
-              choices = levels(ADLB$AVISIT),
-              selected = levels(ADLB$AVISIT)[1],
+              choices = levels(data[["ADLB"]]$AVISIT),
+              selected = levels(data[["ADLB"]]$AVISIT)[1],
               multiple = FALSE
             )
           ),
           select = select_spec(
             label = "Select variable:",
-            choices = variable_choices(ADLB, c("BMRKR2", "ITTFL", "BEP01FL")),
+            choices = variable_choices(data[["ADLB"]], c("BMRKR2", "ITTFL", "BEP01FL")),
             selected = "BMRKR2",
             multiple = FALSE
           )
@@ -165,15 +153,15 @@ app <- teal::init(
             filter_spec(
               label = "Select parameter:",
               vars = "PARAMCD",
-              choices = levels(ADRS$PARAMCD),
-              selected = levels(ADRS$PARAMCD)[3],
+              choices = levels(data[["ADRS"]]$PARAMCD),
+              selected = levels(data[["ADRS"]]$PARAMCD)[3],
               multiple = FALSE
             ),
             filter_spec(
               label = "Select visit:",
               vars = "AVISIT",
-              choices = levels(ADRS$AVISIT),
-              selected = levels(ADRS$AVISIT)[3],
+              choices = levels(data[["ADRS"]]$AVISIT),
+              selected = levels(data[["ADRS"]]$AVISIT)[3],
               multiple = FALSE
             )
           ),
@@ -197,7 +185,7 @@ app <- teal::init(
           dataname = "ADSL",
           select = select_spec(
             label = "Select variable:",
-            choices = variable_choices(ADSL, c("SEX", "COUNTRY")),
+            choices = variable_choices(data[["ADSL"]], c("SEX", "COUNTRY")),
             selected = NULL,
             multiple = FALSE
           )
@@ -210,21 +198,21 @@ app <- teal::init(
           filter = list(
             filter_spec(
               vars = "PARAMCD",
-              choices = levels(ADLB$PARAMCD),
-              selected = levels(ADLB$PARAMCD)[2],
+              choices = levels(data[["ADLB"]]$PARAMCD),
+              selected = levels(data[["ADLB"]]$PARAMCD)[2],
               multiple = TRUE,
               label = "Select measurement:"
             ),
             filter_spec(
               vars = "AVISIT",
-              choices = levels(ADLB$AVISIT),
-              selected = levels(ADLB$AVISIT)[2],
+              choices = levels(data[["ADLB"]]$AVISIT),
+              selected = levels(data[["ADLB"]]$AVISIT)[2],
               multiple = TRUE,
               label = "Select visit:"
             )
           ),
           select = select_spec(
-            choices = variable_choices(ADLB, c("BMRKR2", "ITTFL", "BEP01FL")),
+            choices = variable_choices(data[["ADLB"]], c("BMRKR2", "ITTFL", "BEP01FL")),
             selected = "BMRKR2",
             multiple = FALSE,
             fixed = FALSE,
@@ -234,7 +222,7 @@ app <- teal::init(
         x = teal.transform::data_extract_spec(
           dataname = "ADSL",
           select = select_spec(
-            choices = variable_choices(ADSL, c("ARMCD", "BMRKR1", "BMRKR2", "BEP01FL")),
+            choices = variable_choices(data[["ADSL"]], c("ARMCD", "BMRKR1", "BMRKR2", "BEP01FL")),
             selected = "BMRKR2",
             multiple = FALSE,
             fixed = FALSE
@@ -246,7 +234,7 @@ app <- teal::init(
         response = teal.transform::data_extract_spec(
           dataname = "ADRS",
           select = select_spec(
-            choices = variable_choices(ADRS, c("BMRKR2", "AVALC", "BEP01FL")),
+            choices = variable_choices(data[["ADRS"]], c("BMRKR2", "AVALC", "BEP01FL")),
             selected = "AVALC",
             multiple = FALSE,
             fixed = TRUE,
@@ -256,7 +244,7 @@ app <- teal::init(
         x = teal.transform::data_extract_spec(
           dataname = "ADRS",
           select = select_spec(
-            choices = variable_choices(ADRS, c("AVALC", "AGE", "SEX", "ARMCD", "STRATA1")),
+            choices = variable_choices(data[["ADRS"]], c("AVALC", "AGE", "SEX", "ARMCD", "STRATA1")),
             selected = "ARMCD",
             multiple = FALSE,
             fixed = FALSE,
@@ -290,8 +278,8 @@ app <- teal::init(
           dataname = "ADLB",
           filter = teal.transform::filter_spec(
             vars = "PARAMCD",
-            choices = levels(ADLB$PARAMCD),
-            selected = levels(ADLB$PARAMCD)[2],
+            choices = levels(data[["ADLB"]]$PARAMCD),
+            selected = levels(data[["ADLB"]]$PARAMCD)[2],
             multiple = FALSE,
             label = "Select lab:"
           ),
@@ -306,13 +294,13 @@ app <- teal::init(
           dataname = "ADLB",
           filter = teal.transform::filter_spec(
             vars = "PARAMCD",
-            choices = levels(ADLB$PARAMCD),
-            selected = levels(ADLB$PARAMCD)[1],
+            choices = levels(data[["ADLB"]]$PARAMCD),
+            selected = levels(data[["ADLB"]]$PARAMCD)[1],
             multiple = FALSE,
             label = "Select lab:"
           ),
           select = select_spec(
-            choices = variable_choices(ADLB, c("AVISIT", "PARAMCD", "BEP01FL")),
+            choices = variable_choices(data[["ADLB"]], c("AVISIT", "PARAMCD", "BEP01FL")),
             selected = "AVISIT",
             multiple = FALSE,
             fixed = TRUE
@@ -323,21 +311,21 @@ app <- teal::init(
           filter = list(
             filter_spec(
               vars = "PARAMCD",
-              choices = levels(ADLB$PARAMCD),
-              selected = levels(ADLB$PARAMCD)[1],
+              choices = levels(data[["ADLB"]]$PARAMCD),
+              selected = levels(data[["ADLB"]]$PARAMCD)[1],
               multiple = FALSE,
               label = "Select lab:"
             ),
             filter_spec(
               vars = "AVISIT",
-              choices = levels(ADLB$AVISIT),
-              selected = levels(ADLB$AVISIT)[1],
+              choices = levels(data[["ADLB"]]$AVISIT),
+              selected = levels(data[["ADLB"]]$AVISIT)[1],
               multiple = FALSE,
               label = "Select visit:"
             )
           ),
           select = select_spec(
-            choices = variable_choices(ADLB, c("SEX", "RACE", "ARMCD")),
+            choices = variable_choices(data[["ADLB"]], c("SEX", "RACE", "ARMCD")),
             selected = NULL,
             multiple = FALSE,
             fixed = FALSE,
@@ -349,21 +337,21 @@ app <- teal::init(
           filter = list(
             filter_spec(
               vars = "PARAMCD",
-              choices = levels(ADLB$PARAMCD),
-              selected = levels(ADLB$PARAMCD)[1],
+              choices = levels(data[["ADLB"]]$PARAMCD),
+              selected = levels(data[["ADLB"]]$PARAMCD)[1],
               multiple = FALSE,
               label = "Select lab:"
             ),
             filter_spec(
               vars = "AVISIT",
-              choices = levels(ADLB$AVISIT),
-              selected = levels(ADLB$AVISIT)[1],
+              choices = levels(data[["ADLB"]]$AVISIT),
+              selected = levels(data[["ADLB"]]$AVISIT)[1],
               multiple = FALSE,
               label = "Select visit:"
             )
           ),
           select = select_spec(
-            choices = variable_choices(ADLB, c("SEX", "RACE", "ARMCD")),
+            choices = variable_choices(data[["ADLB"]], c("SEX", "RACE", "ARMCD")),
             selected = NULL,
             multiple = FALSE,
             fixed = FALSE,
