--- a/vignettes/using-bivariate-plot.Rmd
+++ b/vignettes/using-bivariate-plot.Rmd
@@ -42,17 +42,27 @@ Inside this app 5 datasets will be used
 
 ```{r echo=TRUE, message=FALSE, warning=FALSE, results="hide"}
 # nolint start
-ADSL <- teal.modules.general::rADSL
-ADSL2 <- teal.modules.general::rADSL %>%
-  mutate(TRTDUR = round(as.numeric(TRTEDTM - TRTSDTM), 1))
-ADRS <- teal.modules.general::rADRS
-ADTTE <- teal.modules.general::rADTTE
-ADLB <- teal.modules.general::rADLB %>%
-  mutate(CHGC = as.factor(case_when(
-    CHG < 1 ~ "N",
-    CHG > 1 ~ "P",
-    TRUE ~ "-"
-  )))
+data <- teal_data()
+data <- within(data, {
+  ADSL <- teal.modules.general::rADSL
+  ADSL2 <- teal.modules.general::rADSL %>%
+    mutate(TRTDUR = round(as.numeric(TRTEDTM - TRTSDTM), 1))
+  ADRS <- teal.modules.general::rADRS
+  ADTTE <- teal.modules.general::rADTTE
+  ADLB <- teal.modules.general::rADLB %>%
+    mutate(CHGC = as.factor(case_when(
+      CHG < 1 ~ "N",
+      CHG > 1 ~ "P",
+      TRUE ~ "-"
+    )))
+})
+datanames <- c("ADSL", "ADSL2", "ADRS", "ADTTE", "ADLB")
+datanames(data) <- datanames
+jk <- default_cdisc_join_keys[datanames]
+jk_adsl2 <- jk
+names(jk_adsl2)[names(jk_adsl2) == "ADSL"] <- "ADSL2"
+jk <- c(jk, jk_adsl2)
+jk["ADSL2", "ADSL"] <- c("USUBJID", "STUDYID")
 # nolint end
 ```
 
@@ -65,29 +75,7 @@ combinations of data sets.
 
 ```{r echo=TRUE, message=FALSE, warning=FALSE, results="hide"}
 app <- teal::init(
-  data = teal.data::cdisc_data(
-    teal.data::cdisc_dataset("ADSL", ADSL, code = "ADSL <- teal.modules.general::rADSL"),
-    teal.data::cdisc_dataset(
-      "ADSL2",
-      ADSL2,
-      keys = get_cdisc_keys("ADSL"),
-      code = "ADSL2 <- teal.modules.general::rADSL %>%
-              mutate(TRTDUR = round(as.numeric(TRTEDTM - TRTSDTM), 1))"
-    ),
-    teal.data::cdisc_dataset("ADRS", ADRS, code = "ADRS <- teal.modules.general::rADRS"),
-    teal.data::cdisc_dataset("ADTTE", ADTTE, code = "ADTTE <- teal.modules.general::rADTTE"),
-    teal.data::cdisc_dataset(
-      "ADLB",
-      ADLB,
-      code = "ADLB <- teal.modules.general::rADLB %>%
-            mutate(CHGC = as.factor(case_when(
-            CHG < 1 ~ 'N',
-            CHG > 1 ~ 'P',
-            TRUE ~ '-'
-            )))"
-    ),
-    check = TRUE
-  ),
+  data = data,
   modules = teal::modules(
     # tm_g_bivariate ------
     modules(
@@ -98,7 +86,7 @@ app <- teal::init(
           dataname = "ADSL",
           select = select_spec(
             label = "Select variable:",
-            choices = variable_choices(ADSL),
+            choices = variable_choices(data[["ADSL"]]),
             selected = "BMRKR1",
             fixed = FALSE
           )
@@ -107,7 +95,7 @@ app <- teal::init(
           dataname = "ADSL",
           select = select_spec(
             label = "Select variable:",
-            choices = variable_choices(ADSL),
+            choices = variable_choices(data[["ADSL"]]),
             selected = "SEX",
             multiple = FALSE,
             fixed = FALSE
@@ -117,7 +105,7 @@ app <- teal::init(
           dataname = "ADSL",
           select = select_spec(
             label = "Select variables:",
-            choices = variable_choices(ADSL),
+            choices = variable_choices(data[["ADSL"]]),
             selected = NULL,
             multiple = FALSE,
             fixed = FALSE
@@ -127,7 +115,7 @@ app <- teal::init(
           dataname = "ADSL",
           select = select_spec(
             label = "Select variables:",
-            choices = variable_choices(ADSL),
+            choices = variable_choices(data[["ADSL"]]),
             selected = NULL,
             multiple = FALSE,
             fixed = FALSE
@@ -140,7 +128,7 @@ app <- teal::init(
           dataname = "ADSL",
           select = select_spec(
             label = "Select variable:",
-            choices = variable_choices(ADSL, c("BMRKR1", "AGE", "SEX", "STRATA1", "RACE")),
+            choices = variable_choices(data[["ADSL"]], c("BMRKR1", "AGE", "SEX", "STRATA1", "RACE")),
             selected = c("BMRKR1"),
             multiple = FALSE
           )
@@ -149,7 +137,7 @@ app <- teal::init(
           dataname = "ADSL2",
           select = select_spec(
             label = "Select variables:",
-            choices = variable_choices(ADSL2, c("COUNTRY", "AGE", "RACE")),
+            choices = variable_choices(data[["ADSL2"]], c("COUNTRY", "AGE", "RACE")),
             selected = "RACE",
             multiple = FALSE
           )
@@ -158,7 +146,7 @@ app <- teal::init(
           dataname = "ADSL",
           select = select_spec(
             label = "Select variable:",
-            choices = variable_choices(ADSL),
+            choices = variable_choices(data[["ADSL"]]),
             selected = NULL,
             multiple = FALSE,
             fixed = FALSE
@@ -168,7 +156,7 @@ app <- teal::init(
           dataname = "ADSL2",
           select = select_spec(
             label = "Select variables:",
-            choices = variable_choices(ADSL2),
+            choices = variable_choices(data[["ADSL2"]]),
             selected = NULL,
             multiple = FALSE,
             fixed = FALSE
@@ -182,12 +170,12 @@ app <- teal::init(
           filter = teal.transform::filter_spec(
             label = "Select endpoints:",
             vars = c("PARAMCD", "AVISIT"),
-            choices = value_choices(ADRS, c("PARAMCD", "AVISIT"), c("PARAM", "AVISIT")),
+            choices = value_choices(data[["ADRS"]], c("PARAMCD", "AVISIT"), c("PARAM", "AVISIT")),
             selected = "OVRINV - END OF INDUCTION",
             multiple = TRUE
           ),
           select = select_spec(
-            choices = variable_choices(ADRS, c("AVALC", "AVAL")),
+            choices = variable_choices(data[["ADRS"]], c("AVALC", "AVAL")),
             selected = "AVALC",
             multiple = FALSE
           )
@@ -196,7 +184,7 @@ app <- teal::init(
           dataname = "ADTTE",
           select = select_spec(
             label = "Select variable:",
-            choices = variable_choices(ADTTE, c("AVAL", "CNSR")),
+            choices = variable_choices(data[["ADTTE"]], c("AVAL", "CNSR")),
             selected = "AVAL",
             multiple = FALSE,
             fixed = FALSE
@@ -204,7 +192,7 @@ app <- teal::init(
           filter = teal.transform::filter_spec(
             label = "Select endpoint:",
             vars = c("PARAMCD"),
-            choices = value_choices(ADTTE, "PARAMCD", "PARAM"),
+            choices = value_choices(data[["ADTTE"]], "PARAMCD", "PARAM"),
             selected = "OS",
             multiple = FALSE
           )
@@ -214,13 +202,13 @@ app <- teal::init(
           filter = teal.transform::filter_spec(
             label = "Select endpoints:",
             vars = c("PARAMCD", "AVISIT"),
-            choices = value_choices(ADRS, c("PARAMCD", "AVISIT"), c("PARAM", "AVISIT")),
+            choices = value_choices(data[["ADRS"]], c("PARAMCD", "AVISIT"), c("PARAM", "AVISIT")),
             selected = "OVRINV - SCREENING",
             multiple = TRUE
           ),
           select = select_spec(
             label = "Select variable:",
-            choices = variable_choices(ADRS, c("SEX", "RACE", "COUNTRY", "ARM", "PARAMCD", "AVISIT")),
+            choices = variable_choices(data[["ADRS"]], c("SEX", "RACE", "COUNTRY", "ARM", "PARAMCD", "AVISIT")),
             selected = "SEX",
             multiple = FALSE,
             fixed = FALSE
@@ -230,7 +218,7 @@ app <- teal::init(
           dataname = "ADSL",
           select = select_spec(
             label = "Select variables:",
-            choices = variable_choices(ADSL, c("SEX", "RACE")),
+            choices = variable_choices(data[["ADSL"]], c("SEX", "RACE")),
             selected = NULL,
             multiple = FALSE,
             fixed = FALSE
@@ -240,7 +228,7 @@ app <- teal::init(
         color = teal.transform::data_extract_spec(
           dataname = "ADSL",
           select = select_spec(
-            choices = variable_choices(ADSL, c("SEX", "RACE", "COUNTRY")),
+            choices = variable_choices(data[["ADSL"]], c("SEX", "RACE", "COUNTRY")),
             selected = NULL,
             multiple = FALSE,
             fixed = FALSE,
@@ -250,7 +238,7 @@ app <- teal::init(
         fill = teal.transform::data_extract_spec(
           dataname = "ADSL",
           select = select_spec(
-            choices = variable_choices(ADSL, c("SEX", "RACE", "COUNTRY")),
+            choices = variable_choices(data[["ADSL"]], c("SEX", "RACE", "COUNTRY")),
             selected = NULL,
             multiple = FALSE,
             fixed = FALSE,
@@ -260,7 +248,7 @@ app <- teal::init(
         size = teal.transform::data_extract_spec(
           dataname = "ADSL",
           select = select_spec(
-            choices = variable_choices(ADSL, c("AGE", "BMRKR1")),
+            choices = variable_choices(data[["ADSL"]], c("AGE", "BMRKR1")),
             selected = NULL,
             multiple = FALSE,
             fixed = FALSE,
@@ -277,21 +265,21 @@ app <- teal::init(
           filter = list(
             filter_spec(
               vars = "PARAMCD",
-              choices = value_choices(ADRS, "PARAMCD", "PARAM"),
-              selected = levels(ADRS$PARAMCD)[1],
+              choices = value_choices(data[["ADRS"]], "PARAMCD", "PARAM"),
+              selected = levels(data[["ADRS"]]$PARAMCD)[1],
               multiple = FALSE,
               label = "Select response:"
             ),
             filter_spec(
               vars = "AVISIT",
-              choices = levels(ADRS$AVISIT),
-              selected = levels(ADRS$AVISIT)[1],
+              choices = levels(data[["ADRS"]]$AVISIT),
+              selected = levels(data[["ADRS"]]$AVISIT)[1],
               multiple = FALSE,
               label = "Select visit:"
             )
           ),
           select = select_spec(
-            choices = variable_choices(ADRS, c("AVALC", "AVAL")),
+            choices = variable_choices(data[["ADRS"]], c("AVALC", "AVAL")),
             selected = "AVALC",
             multiple = FALSE,
             label = "Select variable:"
@@ -300,7 +288,7 @@ app <- teal::init(
         y = teal.transform::data_extract_spec(
           dataname = "ADSL",
           select = select_spec(
-            choices = variable_choices(ADSL, c("BMRKR1", "SEX", "AGE", "RACE", "COUNTRY")),
+            choices = variable_choices(data[["ADSL"]], c("BMRKR1", "SEX", "AGE", "RACE", "COUNTRY")),
             selected = "BMRKR1",
             multiple = FALSE,
             label = "Select variable:",
@@ -310,7 +298,7 @@ app <- teal::init(
         row_facet = teal.transform::data_extract_spec(
           dataname = "ADRS",
           select = select_spec(
-            choices = variable_choices(ADRS, c("SEX", "RACE", "ARMCD", "PARAMCD")),
+            choices = variable_choices(data[["ADRS"]], c("SEX", "RACE", "ARMCD", "PARAMCD")),
             selected = "SEX",
             multiple = FALSE,
             label = "Select variable:"
@@ -319,7 +307,7 @@ app <- teal::init(
         col_facet = teal.transform::data_extract_spec(
           dataname = "ADRS",
           select = select_spec(
-            choices = variable_choices(ADRS, c("SEX", "RACE", "ARMCD", "PARAMCD", "AVISIT")),
+            choices = variable_choices(data[["ADRS"]], c("SEX", "RACE", "ARMCD", "PARAMCD", "AVISIT")),
             selected = "ARMCD",
             multiple = FALSE,
             fixed = FALSE,
@@ -334,21 +322,21 @@ app <- teal::init(
           filter = list(
             filter_spec(
               vars = "PARAMCD",
-              choices = value_choices(ADRS, "PARAMCD", "PARAM"),
-              selected = levels(ADRS$PARAMCD)[1],
+              choices = value_choices(data[["ADRS"]], "PARAMCD", "PARAM"),
+              selected = levels(data[["ADRS"]]$PARAMCD)[1],
               multiple = FALSE,
               label = "Select response:"
             ),
             filter_spec(
               vars = "AVISIT",
-              choices = levels(ADRS$AVISIT),
-              selected = levels(ADRS$AVISIT)[1],
+              choices = levels(data[["ADRS"]]$AVISIT),
+              selected = levels(data[["ADRS"]]$AVISIT)[1],
               multiple = FALSE,
               label = "Select visit:"
             )
           ),
           select = select_spec(
-            choices = variable_choices(ADRS, c("AVALC", "AVAL")),
+            choices = variable_choices(data[["ADRS"]], c("AVALC", "AVAL")),
             selected = "AVALC",
             multiple = FALSE,
             label = "Select variable:"
@@ -357,7 +345,7 @@ app <- teal::init(
         y = teal.transform::data_extract_spec(
           dataname = "ADSL",
           select = select_spec(
-            choices = variable_choices(ADSL, c("BMRKR1", "SEX", "AGE", "RACE", "COUNTRY")),
+            choices = variable_choices(data[["ADSL"]], c("BMRKR1", "SEX", "AGE", "RACE", "COUNTRY")),
             selected = "BMRKR1",
             multiple = FALSE,
             fixed = FALSE
@@ -368,15 +356,15 @@ app <- teal::init(
           filter = list(
             filter_spec(
               vars = "PARAMCD",
-              choices = value_choices(ADLB, "PARAMCD", "PARAM"),
-              selected = levels(ADLB$PARAMCD)[1],
+              choices = value_choices(data[["ADLB"]], "PARAMCD", "PARAM"),
+              selected = levels(data[["ADLB"]]$PARAMCD)[1],
               multiple = FALSE,
               label = "Select measurement:"
             ),
             filter_spec(
               vars = "AVISIT",
-              choices = levels(ADLB$AVISIT),
-              selected = levels(ADLB$AVISIT)[1],
+              choices = levels(data[["ADLB"]]$AVISIT),
+              selected = levels(data[["ADLB"]]$AVISIT)[1],
               multiple = FALSE,
               label = "Select visit:"
             )
@@ -392,7 +380,7 @@ app <- teal::init(
         col_facet = teal.transform::data_extract_spec(
           dataname = "ADSL",
           select = select_spec(
-            choices = variable_choices(ADSL, c("SEX", "AGE", "RACE", "COUNTRY")),
+            choices = variable_choices(data[["ADSL"]], c("SEX", "AGE", "RACE", "COUNTRY")),
             selected = NULL,
             multiple = FALSE,
             fixed = FALSE,
@@ -403,7 +391,7 @@ app <- teal::init(
         color = teal.transform::data_extract_spec(
           dataname = "ADSL",
           select = select_spec(
-            choices = variable_choices(ADSL, c("SEX", "RACE", "COUNTRY")),
+            choices = variable_choices(data[["ADSL"]], c("SEX", "RACE", "COUNTRY")),
             selected = NULL,
             multiple = FALSE,
             fixed = FALSE,
@@ -413,7 +401,7 @@ app <- teal::init(
         fill = teal.transform::data_extract_spec(
           dataname = "ADSL",
           select = select_spec(
-            choices = variable_choices(ADSL, c("SEX", "RACE", "COUNTRY")),
+            choices = variable_choices(data[["ADSL"]], c("SEX", "RACE", "COUNTRY")),
             selected = NULL,
             multiple = FALSE,
             fixed = FALSE,
@@ -423,7 +411,7 @@ app <- teal::init(
         size = teal.transform::data_extract_spec(
           dataname = "ADSL",
           select = select_spec(
-            choices = variable_choices(ADSL, c("AGE", "BMRKR1")),
+            choices = variable_choices(data[["ADSL"]], c("AGE", "BMRKR1")),
             selected = NULL,
             multiple = FALSE,
             fixed = FALSE,
@@ -438,7 +426,7 @@ app <- teal::init(
         x = teal.transform::data_extract_spec(
           dataname = "ADRS",
           select = select_spec(
-            choices = variable_choices(ADRS, c("AVALC", "AVAL")),
+            choices = variable_choices(data[["ADRS"]], c("AVALC", "AVAL")),
             selected = "AVALC",
             multiple = FALSE,
             fixed = FALSE,
@@ -448,7 +436,7 @@ app <- teal::init(
         y = teal.transform::data_extract_spec(
           dataname = "ADRS",
           select = select_spec(
-            choices = variable_choices(ADRS, c("SEX", "RACE", "COUNTRY", "ARMCD", "BMRKR1", "BMRKR2")),
+            choices = variable_choices(data[["ADRS"]], c("SEX", "RACE", "COUNTRY", "ARMCD", "BMRKR1", "BMRKR2")),
             selected = "BMRKR1",
             multiple = FALSE,
             fixed = FALSE,
@@ -458,7 +446,7 @@ app <- teal::init(
         row_facet = teal.transform::data_extract_spec(
           dataname = "ADRS",
           select = select_spec(
-            choices = variable_choices(ADRS, c("AVISIT", "PARAMCD")),
+            choices = variable_choices(data[["ADRS"]], c("AVISIT", "PARAMCD")),
             selected = "PARAMCD",
             multiple = FALSE,
             label = "Select variables:"
@@ -467,7 +455,7 @@ app <- teal::init(
         col_facet = teal.transform::data_extract_spec(
           dataname = "ADRS",
           select = select_spec(
-            choices = variable_choices(ADRS, c("AVISIT", "PARAMCD")),
+            choices = variable_choices(data[["ADRS"]], c("AVISIT", "PARAMCD")),
             selected = "AVISIT",
             multiple = FALSE,
             label = "Select variables:"
@@ -481,15 +469,15 @@ app <- teal::init(
           filter = list(
             filter_spec(
               vars = "PARAMCD",
-              choices = value_choices(ADLB, "PARAMCD", "PARAM"),
-              selected = levels(ADLB$PARAMCD)[1],
+              choices = value_choices(data[["ADLB"]], "PARAMCD", "PARAM"),
+              selected = levels(data[["ADLB"]]$PARAMCD)[1],
               multiple = FALSE,
               label = "Select lab:"
             ),
             filter_spec(
               vars = "AVISIT",
-              choices = levels(ADLB$AVISIT),
-              selected = levels(ADLB$AVISIT)[1],
+              choices = levels(data[["ADLB"]]$AVISIT),
+              selected = levels(data[["ADLB"]]$AVISIT)[1],
               multiple = FALSE,
               label = "Select visit:"
             )
@@ -506,15 +494,15 @@ app <- teal::init(
           filter = list(
             filter_spec(
               vars = "PARAMCD",
-              choices = value_choices(ADLB, "PARAMCD", "PARAM"),
-              selected = levels(ADLB$PARAMCD)[1],
+              choices = value_choices(data[["ADLB"]], "PARAMCD", "PARAM"),
+              selected = levels(data[["ADLB"]]$PARAMCD)[1],
               multiple = FALSE,
               label = "Select lab:"
             ),
             filter_spec(
               vars = "AVISIT",
-              choices = levels(ADLB$AVISIT),
-              selected = levels(ADLB$AVISIT)[1],
+              choices = levels(data[["ADLB"]]$AVISIT),
+              selected = levels(data[["ADLB"]]$AVISIT)[1],
               multiple = FALSE,
               label = "Select visit:"
             )
@@ -532,21 +520,21 @@ app <- teal::init(
           filter = list(
             filter_spec(
               vars = "PARAMCD",
-              choices = value_choices(ADLB, "PARAMCD", "PARAM"),
-              selected = levels(ADLB$PARAMCD)[1],
+              choices = value_choices(data[["ADLB"]], "PARAMCD", "PARAM"),
+              selected = levels(data[["ADLB"]]$PARAMCD)[1],
               multiple = FALSE,
               label = "Select lab:"
             ),
             filter_spec(
               vars = "AVISIT",
-              choices = levels(ADLB$AVISIT),
-              selected = levels(ADLB$AVISIT)[1],
+              choices = levels(data[["ADLB"]]$AVISIT),
+              selected = levels(data[["ADLB"]]$AVISIT)[1],
               multiple = FALSE,
               label = "Select category:"
             )
           ),
           select = select_spec(
-            choices = variable_choices(ADLB, c("RACE", "SEX", "ARMCD", "ACTARMCD")),
+            choices = variable_choices(data[["ADLB"]], c("RACE", "SEX", "ARMCD", "ACTARMCD")),
             selected = NULL,
             multiple = FALSE,
             fixed = FALSE,
@@ -558,21 +546,21 @@ app <- teal::init(
           filter = list(
             filter_spec(
               vars = "PARAMCD",
-              choices = value_choices(ADLB, "PARAMCD", "PARAM"),
-              selected = levels(ADLB$PARAMCD)[1],
+              choices = value_choices(data[["ADLB"]], "PARAMCD", "PARAM"),
+              selected = levels(data[["ADLB"]]$PARAMCD)[1],
               multiple = FALSE,
               label = "Select lab:"
             ),
             filter_spec(
               vars = "AVISIT",
-              choices = levels(ADLB$AVISIT),
-              selected = levels(ADLB$AVISIT)[1],
+              choices = levels(data[["ADLB"]]$AVISIT),
+              selected = levels(data[["ADLB"]]$AVISIT)[1],
               multiple = FALSE,
               label = "Select category:"
             )
           ),
           select = select_spec(
-            choices = variable_choices(ADLB, c("RACE", "SEX", "ARMCD", "ACTARMCD")),
+            choices = variable_choices(data[["ADLB"]], c("RACE", "SEX", "ARMCD", "ACTARMCD")),
             selected = "ARMCD",
             multiple = FALSE,
             fixed = FALSE,
@@ -583,7 +571,7 @@ app <- teal::init(
         color = teal.transform::data_extract_spec(
           dataname = "ADSL",
           select = select_spec(
-            choices = variable_choices(ADSL, c("SEX", "RACE", "COUNTRY")),
+            choices = variable_choices(data[["ADSL"]], c("SEX", "RACE", "COUNTRY")),
             selected = NULL,
             multiple = FALSE,
             fixed = FALSE,
@@ -593,7 +581,7 @@ app <- teal::init(
         fill = teal.transform::data_extract_spec(
           dataname = "ADSL",
           select = select_spec(
-            choices = variable_choices(ADSL, c("SEX", "RACE", "COUNTRY")),
+            choices = variable_choices(data[["ADSL"]], c("SEX", "RACE", "COUNTRY")),
             selected = NULL,
             multiple = FALSE,
             fixed = FALSE,
@@ -603,7 +591,7 @@ app <- teal::init(
         size = teal.transform::data_extract_spec(
           dataname = "ADSL",
           select = select_spec(
-            choices = variable_choices(ADSL, c("AGE", "BMRKR1")),
+            choices = variable_choices(data[["ADSL"]], c("AGE", "BMRKR1")),
             selected = NULL,
             multiple = FALSE,
             fixed = FALSE,
