--- a/vignettes/using-data-table.Rmd
+++ b/vignettes/using-data-table.Rmd
@@ -36,9 +36,15 @@ Inside this app 3 datasets will be used
 
 ```{r echo=TRUE, message=FALSE, warning=FALSE, results="hide"}
 # nolint start
-ADSL <- teal.modules.general::rADSL
-ADTTE <- teal.modules.general::rADTTE
-ADLB <- teal.modules.general::rADLB
+data <- teal_data()
+data <- within(data, {
+  ADSL <- teal.modules.general::rADSL
+  ADTTE <- teal.modules.general::rADTTE
+  ADLB <- teal.modules.general::rADLB
+})
+datanames <- c("ADSL", "ADTTE", "ADLB")
+datanames(data) <- datanames
+join_keys(data) <- default_cdisc_join_keys[datanames]
 # nolint end
 ```
 
@@ -50,12 +56,7 @@ combinations of data sets.
 
 ```{r echo=TRUE, message=FALSE, warning=FALSE, results="hide"}
 app <- teal::init(
-  data = teal.data::cdisc_data(
-    teal.data::cdisc_dataset("ADSL", ADSL, code = "ADSL <- teal.modules.general::rADSL"),
-    teal.data::cdisc_dataset("ADTTE", ADTTE, code = "ADTTE <- teal.modules.general::rADTTE"),
-    teal.data::cdisc_dataset("ADLB", ADLB, code = "ADLB <- teal.modules.general::rADLB"),
-    check = TRUE
-  ),
+  data = data,
   modules = teal::modules(
     # two-datasets example
     tm_data_table(
