--- a/vignettes/using-scatterplot-matrix.Rmd
+++ b/vignettes/using-scatterplot-matrix.Rmd
@@ -40,17 +40,27 @@ Inside this app 5 datasets will be used
 
 ```{r echo=TRUE, message=FALSE, warning=FALSE, results="hide"}
 # nolint start
-ADSL <- teal.modules.general::rADSL
-ADSL2 <- teal.modules.general::rADSL %>%
-  mutate(TRTDUR = round(as.numeric(TRTEDTM - TRTSDTM), 1))
-ADRS <- teal.modules.general::rADRS
-ADTTE <- teal.modules.general::rADTTE
-ADLB <- teal.modules.general::rADLB %>%
-  mutate(CHGC = as.factor(case_when(
-    CHG < 1 ~ "N",
-    CHG > 1 ~ "P",
-    TRUE ~ "-"
-  )))
+data <- teal_data()
+data <- within(data, {
+  ADSL <- teal.modules.general::rADSL
+  ADSL2 <- teal.modules.general::rADSL %>%
+    mutate(TRTDUR = round(as.numeric(TRTEDTM - TRTSDTM), 1))
+  ADRS <- teal.modules.general::rADRS
+  ADTTE <- teal.modules.general::rADTTE
+  ADLB <- teal.modules.general::rADLB %>%
+    mutate(CHGC = as.factor(case_when(
+      CHG < 1 ~ "N",
+      CHG > 1 ~ "P",
+      TRUE ~ "-"
+    )))
+})
+datanames <- c("ADSL", "ADSL2", "ADRS", "ADTTE", "ADLB")
+datanames(data) <- datanames
+jk <- default_cdisc_join_keys[datanames]
+jk_adsl2 <- jk
+names(jk_adsl2)[names(jk_adsl2) == "ADSL"] <- "ADSL2"
+jk <- c(jk, jk_adsl2)
+jk["ADSL2", "ADSL"] <- c("USUBJID", "STUDYID")
 # nolint end
 ```
 
@@ -63,27 +73,7 @@ combinations of data sets.
 
 ```{r echo=TRUE, message=FALSE, warning=FALSE, results="hide"}
 app <- teal::init(
-  data = teal.data::cdisc_data(
-    teal.data::cdisc_dataset("ADSL", ADSL, code = "ADSL <- teal.modules.general::rADSL"),
-    teal.data::cdisc_dataset(
-      "ADSL2",
-      ADSL2,
-      keys = get_cdisc_keys("ADSL"),
-      code = "ADSL2 <- teal.modules.general::rADSL %>%
-              mutate(TRTDUR = round(as.numeric(TRTEDTM - TRTSDTM), 1))"
-    ),
-    teal.data::cdisc_dataset("ADRS", ADRS, code = "ADRS <- teal.modules.general::rADRS"),
-    teal.data::cdisc_dataset("ADTTE", ADTTE, code = "ADTTE <- teal.modules.general::rADTTE"),
-    teal.data::cdisc_dataset("ADLB", ADLB,
-      code = "ADLB <- teal.modules.general::rADLB %>%
-            mutate(CHGC = as.factor(case_when(
-            CHG < 1 ~ 'N',
-            CHG > 1 ~ 'P',
-            TRUE ~ '-'
-            )))"
-    ),
-    check = TRUE
-  ),
+  data = data,
   modules = teal::modules(
     modules(
       label = "Scatterplot matrix",
@@ -94,7 +84,7 @@ app <- teal::init(
           dataname = "ADSL",
           select = select_spec(
             label = "Select variables:",
-            choices = variable_choices(ADSL),
+            choices = variable_choices(data[["ADSL"]]),
             selected = c("AGE", "RACE", "SEX", "BMRKR1", "BMRKR2"),
             multiple = TRUE,
             fixed = FALSE,
@@ -109,7 +99,7 @@ app <- teal::init(
             dataname = "ADSL",
             select = select_spec(
               label = "Select variables:",
-              choices = variable_choices(ADSL),
+              choices = variable_choices(data[["ADSL"]]),
               selected = c("AGE", "ACTARM", "SEX", "BMRKR1"),
               multiple = TRUE,
               fixed = FALSE,
@@ -120,7 +110,7 @@ app <- teal::init(
             dataname = "ADSL2",
             select = select_spec(
               label = "Select variables:",
-              choices = variable_choices(ADSL2),
+              choices = variable_choices(data[["ADSL2"]]),
               selected = c("COUNTRY", "ACTARM", "STRATA1"),
               multiple = TRUE,
               fixed = FALSE,
@@ -134,7 +124,7 @@ app <- teal::init(
         variables = teal.transform::data_extract_spec(
           dataname = "ADTTE",
           select = select_spec(
-            choices = variable_choices(ADTTE, c("AVAL", "BMRKR1", "BMRKR2")),
+            choices = variable_choices(data[["ADTTE"]], c("AVAL", "BMRKR1", "BMRKR2")),
             selected = c("AVAL", "BMRKR1", "BMRKR2"),
             multiple = TRUE,
             fixed = FALSE,
@@ -150,7 +140,7 @@ app <- teal::init(
             dataname = "ADRS",
             select = select_spec(
               label = "Select variables:",
-              choices = variable_choices(ADRS),
+              choices = variable_choices(data[["ADRS"]]),
               selected = c("AVAL", "AVALC"),
               multiple = TRUE,
               fixed = FALSE,
@@ -159,7 +149,7 @@ app <- teal::init(
             filter = teal.transform::filter_spec(
               label = "Select endpoints:",
               vars = c("PARAMCD", "AVISIT"),
-              choices = value_choices(ADRS, c("PARAMCD", "AVISIT"), c("PARAM", "AVISIT")),
+              choices = value_choices(data[["ADRS"]], c("PARAMCD", "AVISIT"), c("PARAM", "AVISIT")),
               selected = "OVRINV - SCREENING",
               multiple = FALSE
             )
@@ -168,7 +158,7 @@ app <- teal::init(
             dataname = "ADTTE",
             select = select_spec(
               label = "Select variables:",
-              choices = variable_choices(ADTTE),
+              choices = variable_choices(data[["ADTTE"]]),
               selected = c("AVAL", "CNSR"),
               multiple = TRUE,
               fixed = FALSE,
@@ -177,7 +167,7 @@ app <- teal::init(
             filter = teal.transform::filter_spec(
               label = "Select parameters:",
               vars = "PARAMCD",
-              choices = value_choices(ADTTE, "PARAMCD", "PARAM"),
+              choices = value_choices(data[["ADTTE"]], "PARAMCD", "PARAM"),
               selected = "OS",
               multiple = TRUE
             )
